fixed breakpoint css and some spacing issues

--- a/src/App.css
+++ b/src/App.css
@@ -2,8 +2,16 @@ html {
     background-color: #5c6d91;
 }
 
+.kg-image-card {
+    width: 100%;
+    margin-left: 0px;
+    margin-top: 2rem;
+    margin-bottom: 2rem;
+}
+
 .kg-image-card img {
     width: 100%;
+    padding: 0px;
 }
 
 figcaption {
